# opencode-parallel

./: .gitignore  AGENTS.md  BUILD_FIXES.md  CONTRIBUTING.md  Cargo.toml  DIAGRAM.txt  GIT_SETUP.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  demo.sh  setup.sh  tasks.example.json  test-tasks.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BUILD_COMPLETE.md  CONTROLS.md  HOW_IT_WORKS.md  MESSAGING.md  NEXT_STEPS.md  QUICKSTART.md  README.md  STATUS.md  UI_PREVIEW.md  tui-user-guide.md
examples/: basic_usage.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.test.ts  client.ts  events.test.ts  events.ts  index.ts  types.ts
src/: agent.rs  constants.rs  executor.rs  lib.rs  main.rs  orchestrator.rs  server.rs  tui.rs  utils.rs  web.rs
src/server/: client.rs  events.rs  logs.rs  mod.rs  types.rs
src/tui/: app.rs  commands.rs  handlers.rs  messages.rs  mod.rs  scroll.rs  selection.rs  session.rs  textarea.rs  tool_display.rs  worker.rs
src/tui/ui/: dialogs.rs  diff.rs  mod.rs  render.rs  syntax.rs  theme.rs
ts-server/: .eslintrc.json  README.md  package.json
ts-server/src/: index.ts
ts-server/src/sdk/: client.test.ts  client.ts  index.ts  process.ts
ts-server/src/server/: index.ts  orchestrator.test.ts  orchestrator.ts  routes.ts  worker.ts
ts-server/src/types/: index.ts
web-client/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web-client/src/: App.css  App.tsx
web-client/src/api/: client.ts
web-client/src/components/: CodeBlock.tsx  DiffViewer.tsx  Header.tsx  MainContent.tsx  ModelSelector.tsx  Sidebar.tsx  TaskInput.tsx  ToolCallDisplay.tsx  WorkerCard.tsx  WorkerGrid.tsx
web-client/src/hooks/: useOpenCode.ts
web-client/src/services/: orchestrator.ts
web-client/src/types/: index.ts
web-client/src/utils/: commands.ts
