[package]
name = "opencode-parallel"
version = "0.1.0"
edition = "2021"
authors = ["OpenCode Parallel Contributors"]
description = "A CLI tool for running multiple AI coding agents in parallel"
license = "MIT"
repository = "https://github.com/yourusername/opencode-parallel"
readme = "README.md"
keywords = ["cli", "ai", "coding", "parallel", "tui"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "opencode_parallel"
path = "src/lib.rs"

[[bin]]
name = "opencode-parallel"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tui-textarea = { package = "tui-textarea-2", version = "0.10" }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
arboard = "3"
base64 = "0.22"
similar = "2.6"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
once_cell = "1.19"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
